Doubt functionality for NPCs actually fully setup now. Needs testing though and balancing.
New variable in the IDI game manager called NPC Doubt Timers which is an array of timer handles. This is added to after calling the Doubt Check function with a timer in the NPC decision mind component.

New function in the IDI game manager: Clear NPC Doubt Timers. This loops through the array and clears and invalidates each timer handle and then clears the array on completion of this loop.
This function is called on doubt check passing the initial 2 checks and is also called at the start of the end player turn function.

At the end of the end player turn function we now loop through all of the playing characters and then check if they are an NPC if they are then we get their difficulty and call the optional action decide function in the NPC mind decision component which then allows each of the NPCs to possibly doubt this round of cards that has just played.

At the of the optional action decide function in the NPC decision mind component after calling the doubt decide function we then check if we are going to doubt this round and if so then we set a timer of Doubt Check in the IDI game manager of a timer randomly between 0.25 and 0.45 so it feels a little more organic and so there is a chance that they are still too slow and that the next player will play their cards. After setting this timer we then add it to the NPC doubt timer array in the IDI game manager.

All of this should work need to properly test it but wanted to commit it now just in case I don't get around to testing it tonight.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -295,13 +295,13 @@ PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.D
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
-BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
@@ -313,7 +313,7 @@ None=======
 None=======
 None=======
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+K2Node=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
 Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -322,7 +322,7 @@ SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.De
 SceneComponent=
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
-K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,PropertyWrapper.DefaultValueCategory.Expert Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Easy Difficulty Card Amount Weightings,PropertyWrapper.DefaultValueCategory.Medium Difficulty Card Amount Weightings,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
@@ -1675,9 +1675,9 @@ K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
 DataTable="\"Object\" "
-EdGraphNode_Comment="\"Object\" "
+EdGraphNode_Comment="\"Object\" \"Object.Comment.CommentColor\" "
 BPC_CurrentHand_C="\"Object\" \"Object.Default.Current Hand\" "
 BP_Card_Dealer_C="\"Object.Default.Pile Cards\" "
 BillboardComponent="\"Object\" "
@@ -1827,9 +1827,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1857,15 +1857,16 @@ OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
 OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decision_Mind
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem4=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem5=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem6=/Game/NPCs/BP_NPC
+MRUItem0=/Game/NPCs/BP_NPC
+MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem2=/Game/Player/BP_Player
+MRUItem3=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem5=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem6=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
 MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
 MRUItem8=/Game/UI/Diegetic/Main_Games/WBP_Game_Rules
 MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
@@ -3313,6 +3314,7 @@ WidgetComponent.Events=True
 TargetPoint.LOD=True
 TargetPoint.TextureStreaming=True
 TargetPoint.LevelInstance=True
+BP_Rat_Screw_Game_Manager_C.Widgets=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
