Altered a lot of the variables for the doubt decide. Fixed NPCs doubting using new function in NPC opponent interface. Debugging doubt decide function.
Nerfed all of the reaction speeds and frequencies for the different difficulties.

Fixed logic issue with doubt check being called with a timer.
It is fixed by creating a new function in the opponent interface for doubting which is called with a timer instead of calling the doubt check directly in the game manager since need to pass the NPC as a parameter so this new function in the interface does that.

So now the timers work properly now as well.

Some print strings setup for debugging the doubt decide function with a new bool local variable in the function for if we want to debug or not.

Need to keep debugging and testing to see if everything is working properly.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -327,9 +327,9 @@ BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
+CapsuleComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
-Character=PropertyWrapper.DefaultValueCategory.All Cards
+Character=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,PropertyWrapper.DefaultValueCategory.Game -> Difficulty,PropertyWrapper.DefaultValueCategory.Face Card Triggers,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Face Card Triggers,K2Node_VariableSet.DefaultValueCategory.Face Card Triggers,StaticMeshComponent.Collision.Collision
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 Blueprint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
@@ -1520,7 +1520,7 @@ MaterialEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Comment.CommentColor\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1834,7 +1834,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1858,22 +1858,23 @@ OpenAssetsAtExit=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind.BPC_NPC_Decisi
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
 OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/BP_NPC
-MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem2=/Game/Player/BP_Player
-MRUItem3=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem5=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem6=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
-MRUItem8=/Game/UI/Diegetic/Main_Games/WBP_Game_Rules
-MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem10=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem11=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem12=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem13=/Game/NPCs/BPI_NPC_Opponent
+MRUItem0=/Game/NPCs/BPI_NPC_Opponent
+MRUItem1=/Game/NPCs/BP_NPC
+MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem3=/Game/Player/BP_Player
+MRUItem4=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem6=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem7=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem8=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
+MRUItem9=/Game/UI/Diegetic/Main_Games/WBP_Game_Rules
+MRUItem10=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem12=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem13=/Game/Shared_Game_Mechanics/BPI_Playing_Character
 MRUItem14=/Game/NPCs/Enum_Opponent_Difficulties
 MRUItem15=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
 MRUItem16=/Game/Shared_Game_Mechanics/Cards/BP_Card
