Current turn indicator bounce animation functionality. Doubt calling for NPCs not done for most recent player.
Current turn indicator has a bounce animation using a timeline which is activated when it reached its location and rotation for the current turn.

When looping through playing characters for the NPCs to call the optional side choice function it also checks if it is the most recent player and only calls if not so that the NPC who just played cannot call doubt on their own cards played. Think this may have fixed the issue I found with doubting but need to do more testing and debugging for overall timing etc.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1552,7 +1552,7 @@ PinnedCommandList.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1840,7 +1840,7 @@ TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.Rende
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
 IDI Decide_2="\"Struct\" "
-BP_Turn_Manager_C="\"Object\" "
+BP_Turn_Manager_C="\"Object\" \"Object.Turn Taking.Playing Characters\" "
 Font="\"Object\" \"Object.Font\" "
 WBP_TextPopUp_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
