Darts begun functionality. Dart board. Dart Start Game widget. Dart Board. Player interaction with dart board.
Interact input action is now also used for dart board interaction to start darts game.
Dart board:
static mesh for dart board.
Interact collision - only overlapping with the player.
Start game widget.
Dart playing position and directional arrow.
Dart non-playing position and directional arrow.

On overlap start line of sight event if game not already active and set player in range to be true.
On exit overlap set player in range to be false and stop line of sight event.

Line of sight event from player forward using control rotation to see if the player is looking at the dart board and if they are and the game is not active then we call the show UI event if not then we call the hide UI event.

Show UI event sets the visibility of the start game widget to be true and sets the can interact with dart board bool in the player to be true. Hide UI event does the opposite.

If we overlap and the game is already started we stop the line of sight, set player in range false, hide the UI and set can interact with dart board to be false.

Some functionality started for the dart game manager.
Setup game function.
Begin game function.
Play dart function.
End player turn function.
Move characters function.
Cancel / Leave game function.
Camera fade in function.
Camera fade out function.

Variables:
dart board ref
dart NPC opponent
player ref
darts game active
fade time for setup
fade time for moving
active player
current round index
darts available
player -> score (actor to integer map)
current round scores (array of integers)

Setup game function:
set ignore move input true
select randomly the active player between the player and the NPC (75% for the player currently)
call camera fade out function with fade time for setup passed
call move characters with timer of length fade time for setup
add 2 entries to the player -> score map with player ref and dart npc opponent as th

--- a/Project_7_Sins/Config/DefaultEngine.ini
+++ b/Project_7_Sins/Config/DefaultEngine.ini
@@ -249,6 +249,7 @@ ManualIPAddress=
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="NPC")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Card")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Jukebox")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="DartBoard")
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap),(Channel="Card",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="Player",Response=ECR_Overlap),(Channel="NPC",Response=ECR_Overlap),(Channel="Card",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
