Put Jess' Props in from her branch since need to use them for darts functionality.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
@@ -2011,7 +2011,7 @@ ChildActorComponent="\"Object\" \"Object.ChildActorComponent.ChildActorTemplate\
 BP_Dart_Board_C="\"Object.Scores.Score Point Actors\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 None=======
 None=======
@@ -2058,11 +2058,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Game_Manager.BP_Dart_Game_Manager
-OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Board.BP_Dart_Board
-OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart.BP_Dart
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/WBP_Darts_Aim_Bar.WBP_Darts_Aim_Bar
-OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Score_Point.BP_Dart_Score_Point
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Mini_Games/Darts/BP_Dart_Score_Point
